UtahLiveDataTest/src/objects/Form__c.object
<CustomObject>
    <description>[Business] object represents forms on grants.gov1</description>
    <fields>
        <fullName>AC12__c</fullName>
        <label>AC12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC13__c</fullName>
        <label>AC13</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC1__c</fullName>
        <label>AC1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyRoutingIdentifier__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Agency Routing Identifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <description>This field is used in Project/Performance Site location form as the first field, Research &amp; Related Other Project Information form and Application for Federal Assistance form.</description>
        <label>Agreement1</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Project/Performance Site as I am submitting checkbox in Site Location 1, Application for Federal Assistance form as I agree under terms and conditions, Research &amp; Related Other Project Information form.</description>
        <label>Agreement2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnimalWelfareAssuranceNumber__c</fullName>
        <description>This field is used in Research &amp; Related Other Project Information.</description>
        <label>Animal Welfare Assurance Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantDebtObs__c</fullName>
        <description>This field is used in Application for Federal Assistance form to check if the applicant is delinquent to debt.</description>
        <label>ApplicantDebt(Obs)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantIdentifier__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Applicant Identifier, SF-424 RR Multi-Project Cover form.</description>
        <label>Applicant Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantOrganizationFormula__c</fullName>
        <description>This field is used in Certification Regarding Maintenance of Effort form.</description>
        <formula>Application__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Organization Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantReviewDate__c</fullName>
        <description>This field is used in Application for Federal Assistance form.</description>
        <label>Applicant Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicantsOrganization2__c</fullName>
        <description>This field is used in Project/Performance Site Location form as Organization Name under Project/Performance Site Location 1 block.</description>
        <label>Applicant&apos;s Organization 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicantsOrganization__c</fullName>
        <description>This field is used in Certification Regarding Lobbying Form as Applicant&apos;s Organization, Assurances for Non-Construction form as Applicant Organization, Assurances for Construction form as Applicant&apos;s Organization, Key Contacts form as Applicant Organization&apos;s Name, Project/Performance Site Location form as Organization Name, Application for Federal Assistance form as Legal name</description>
        <label>Applicant&apos;s Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationReview__c</fullName>
        <description>This field is used in SF424 RR Application For Federal Assistance Form.</description>
        <label>Application Review</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppplicationSubmitted__c</fullName>
        <label>Appplication Submitted</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableToStateUnderEO12372Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Application for Federal Assistance form under Application subject to review block, SF-424 RR Multi-Project Cover form,  Research &amp; Related Other Project Information form.</description>
        <label>Available to State under EO 12372 review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AwardAmount__c</fullName>
        <description>This field is used in Disclosure of Lobbying Activities Form.</description>
        <label>Award Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Base_Salary__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period form</description>
        <label>Base Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BestPractices__c</fullName>
        <label>Best Practices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a.Crisis line/hot line</fullName>
                </value>
                <value>
                    <fullName>b.Hospital and Crime scene response</fullName>
                </value>
                <value>
                    <fullName>c.Individual crisis intervention</fullName>
                </value>
                <value>
                    <fullName>d.Individual short term counseling</fullName>
                </value>
                <value>
                    <fullName>e.Individual long term counseling/therapy</fullName>
                </value>
                <value>
                    <fullName>f.Psycho educational support groups</fullName>
                </value>
                <value>
                    <fullName>g.Therapy groups</fullName>
                </value>
                <value>
                    <fullName>h.Services to both primary and secondary victims</fullName>
                </value>
                <value>
                    <fullName>i.Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brochures__c</fullName>
        <label>Brochures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Period_End_Date__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period form for End date of the budget</description>
        <label>Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Period_Start_Date__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period form for start date of the budget period</description>
        <label>Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Budget Period form used for type of budget (options from custom settings)</description>
        <label>Budget Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEISPicklist__c</fullName>
        <label>CEISPicklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>No changes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFDANumber__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Catalog of Federal Domestic Number, SF-424 RR Multi-Project Cover form.</description>
        <label>CFDA Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDATitle__c</fullName>
        <description>This field is used in Application for Federal Assistance form as CFDA Title, SF-424 RR Multi-Project Cover form.</description>
        <label>CFDA Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CFSectionA__c</fullName>
        <label>Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recipient has less than 50 employees</fullName>
                </value>
                <value>
                    <fullName>Recipient is an Indian tribe</fullName>
                </value>
                <value>
                    <fullName>Recipient is a non-profit organization</fullName>
                </value>
                <value>
                    <fullName>Recipient is an educational institution</fullName>
                </value>
                <value>
                    <fullName>Recipient is receiving an award less than $25,000</fullName>
                </value>
                <value>
                    <fullName>Recipient is a medical institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CFTGDescription__c</fullName>
        <label>CFTGDescription</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CJAType__c</fullName>
        <label>CJA Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Probation</fullName>
                </value>
                <value>
                    <fullName>Corrections</fullName>
                </value>
                <value>
                    <fullName>Courts</fullName>
                </value>
                <value>
                    <fullName>Other (Describe)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMD__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Coordination and Multi- Disciplinary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSStalkingPercent__c</fullName>
        <formula>CSStalking__c / TotalCrimeType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSStalking__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Stalking</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashMatchList__c</fullName>
        <label>a. LIST the Source(s) of cash match</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChangeRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Negotiation Request</label>
        <referenceTo>ChangeRequest__c</referenceTo>
        <relationshipLabel>Application Details</relationshipLabel>
        <relationshipName>Application_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>Used in RESEARCH &amp; RELATED BUDGET - Personal Data form</description>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US Citizen</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Other non-US Citizen</fullName>
                </value>
                <value>
                    <fullName>Do Not Wish to Provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City11__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>City11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <description>This field is used in Project/Performance Site Location form as City under Project/Performance Site Location 1 block, SF-424 RR Multi-Project Cover form.</description>
        <label>City1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>This field is used in Key Contacts form as city, Project/Performance Site Location form as city,Application for Federal Assistance form as city under address block, SF-424 RR Multi-Project Cover form</description>
        <label>City</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparison1__c</fullName>
        <label>Comparison1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CompetitionIdentificationNumber__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Competition Identification Number.</description>
        <label>Competition Identification Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompetitionIdentificationTitle__c</fullName>
        <description>This field is used in Appplication for Federal Assistance form as Title.</description>
        <label>Competition Identification Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CongressionalDistrict__c</fullName>
        <description>This field is used in Project/Performance site location as Project/Performance Site Congressional District under Project/Performance Site Location 1, Application for Federal Assistance form as Congressional District of Applicant, SF-424 RR Multi-Project Cover form.</description>
        <label>Congressional District</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Statewide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CongressionalDistrictofProgramProject__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Congressional District of Program/Project.</description>
        <label>CongressionalDistrict of Program/Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country22__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>Country22</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <description>This field is used in Project/Performance Site Location as Country under Project/Performance Site Location 1 block, SF-424 RR Multi-Project Cover form.</description>
        <label>Country2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryPick__c</fullName>
        <description>This field is used in Application for Federal Assistance form.</description>
        <label>Country Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AFG: AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALB: ALBANIA</fullName>
                </value>
                <value>
                    <fullName>DZA: ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AND: ANDORRA</fullName>
                </value>
                <value>
                    <fullName>AGO: ANGOLA</fullName>
                </value>
                <value>
                    <fullName>AIA: ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ATA: ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ATG: ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARG: ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARM: ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ABW: ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUS: AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUT: AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZE: AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BHS: BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BHR: BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BGD: BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BRB: BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BEL: BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BLR: BELARUS</fullName>
                </value>
                <value>
                    <fullName>BLZ: BELIZE</fullName>
                </value>
                <value>
                    <fullName>BEN: BENIN</fullName>
                </value>
                <value>
                    <fullName>BMU: BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BTN: BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOL: BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BIH: BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BWA: BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BVT: BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRA: BRAZIL</fullName>
                </value>
                <value>
                    <fullName>IOT: BRITISH INDIAN OCEAN TERRITORY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryTemp__c</fullName>
        <label>Country1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFG: AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALB: ALBANIA</fullName>
                </value>
                <value>
                    <fullName>DZA: ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AND: ANDORRA</fullName>
                </value>
                <value>
                    <fullName>AGO: ANGOLA</fullName>
                </value>
                <value>
                    <fullName>AIA: ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ATA: ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ATG: ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARG: ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARM: ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ABW: ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUS: AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUT: AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZE: AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BHS: BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BHR: BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BGD: BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BRB: BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BEL: BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BLR: BELARUS</fullName>
                </value>
                <value>
                    <fullName>BLZ: BELIZE</fullName>
                </value>
                <value>
                    <fullName>BEN: BENIN</fullName>
                </value>
                <value>
                    <fullName>BMU: BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BTN: BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOL: BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BIH: BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BWA: BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BVT: BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRA: BRAZIL</fullName>
                </value>
                <value>
                    <fullName>IOT: BRITISH INDIAN OCEAN TERRITORY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field is used in Key Contacts form as country,Project/Performance Site Location as Country, Application for Federal Assistance form as country under address block,SF-424 RR Multi-Project Cover form.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFG: AFGHANISTAN</fullName>
                </value>
                <value>
                    <fullName>ALB: ALBANIA</fullName>
                </value>
                <value>
                    <fullName>DZA: ALGERIA</fullName>
                </value>
                <value>
                    <fullName>AND: ANDORRA</fullName>
                </value>
                <value>
                    <fullName>AGO: ANGOLA</fullName>
                </value>
                <value>
                    <fullName>AIA: ANGUILLA</fullName>
                </value>
                <value>
                    <fullName>ATA: ANTARCTICA</fullName>
                </value>
                <value>
                    <fullName>ATG: ANTIGUA AND BARBUDA</fullName>
                </value>
                <value>
                    <fullName>ARG: ARGENTINA</fullName>
                </value>
                <value>
                    <fullName>ARM: ARMENIA</fullName>
                </value>
                <value>
                    <fullName>ABW: ARUBA</fullName>
                </value>
                <value>
                    <fullName>AUS: AUSTRALIA</fullName>
                </value>
                <value>
                    <fullName>AUT: AUSTRIA</fullName>
                </value>
                <value>
                    <fullName>AZE: AZERBAIJAN</fullName>
                </value>
                <value>
                    <fullName>BHS: BAHAMAS</fullName>
                </value>
                <value>
                    <fullName>BHR: BAHRAIN</fullName>
                </value>
                <value>
                    <fullName>BGD: BANGLADESH</fullName>
                </value>
                <value>
                    <fullName>BRB: BARBADOS</fullName>
                </value>
                <value>
                    <fullName>BEL: BELGIUM</fullName>
                </value>
                <value>
                    <fullName>BLR: BELARUS</fullName>
                </value>
                <value>
                    <fullName>BLZ: BELIZE</fullName>
                </value>
                <value>
                    <fullName>BEN: BENIN</fullName>
                </value>
                <value>
                    <fullName>BMU: BERMUDA</fullName>
                </value>
                <value>
                    <fullName>BTN: BHUTAN</fullName>
                </value>
                <value>
                    <fullName>BOL: BOLIVIA</fullName>
                </value>
                <value>
                    <fullName>BIH: BOSNIA AND HERZEGOWINA</fullName>
                </value>
                <value>
                    <fullName>BWA: BOTSWANA</fullName>
                </value>
                <value>
                    <fullName>BVT: BOUVET ISLAND</fullName>
                </value>
                <value>
                    <fullName>BRA: BRAZIL</fullName>
                </value>
                <value>
                    <fullName>IOT: BRITISH INDIAN OCEAN TERRITORY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County11__c</fullName>
        <description>This field is used in SF-424 RR Multi-Project Cover form.</description>
        <label>County11</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County1__c</fullName>
        <description>This field is used in Project/Performance Site Location form as County under Project/Performance Site Location 1 block, SF-424 RR Multi-Project Cover form.</description>
        <label>County1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>This field is used in Key Contacts form as County,Project/Performance Site Location as County, Application for Federal Assistance form as County under address block, SF-424 RR Multi-Project Cover form.</description>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Box Elder</fullName>
                </value>
                <value>
                    <fullName>Cache</fullName>
                </value>
                <value>
                    <fullName>Carbon</fullName>
                </value>
                <value>
                    <fullName>Daggett</fullName>
                </value>
                <value>
                    <fullName>Davis</fullName>
                </value>
                <value>
                    <fullName>Duchesne</fullName>
                </value>
                <value>
                    <fullName>Emery</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Grand</fullName>
                </value>
                <value>
                    <fullName>Iron</fullName>
                </value>
                <value>
                    <fullName>Juab</fullName>
                </value>
                <value>
                    <fullName>Kane</fullName>
                </value>
                <value>
                    <fullName>Millard</fullName>
                </value>
                <value>
                    <fullName>Morgan</fullName>
                </value>
                <value>
                    <fullName>Paiute</fullName>
                </value>
                <value>
                    <fullName>Rich</fullName>
                </value>
                <value>
                    <fullName>Salt Lake</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
                <value>
                    <fullName>San Pete</fullName>
                </value>
                <value>
                    <fullName>Sevier</fullName>
                </value>
                <value>
                    <fullName>Summit</fullName>
                </value>
                <value>
                    <fullName>Tooele</fullName>
                </value>
                <value>
                    <fullName>Uintah</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Wasatch</fullName>
                </value>
                <value>
                    <fullName>Washington</fullName>
                </value>
                <value>
                    <fullName>Wayne</fullName>
                </value>
                <value>
                    <fullName>Weber</fullName>
                </value>
                <value>
                    <fullName>Statewide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credential_2__c</fullName>
        <label>Credential_2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <description>Agency login</description>
        <label>Credential</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCS__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Data/Communication Systems</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DUNSNumber__c</fullName>
        <description>This field is used in Project/Performance Site Location form as DUNS Number under Project/Performance Site Location 1 block, Application for Federal Assistance form as Organizational DUNS.</description>
        <label>DUNS Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVPercent__c</fullName>
        <formula>DomesticViolence__c / TotalCrimeType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DaVPercent__c</fullName>
        <formula>DatingViolence__c / TotalCrimeType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percents</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DateOfLastReport__c</fullName>
        <description>This field is used in Disclosure of Lobbying Activities form.</description>
        <label>Date Of Last Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateRecievedByState__c</fullName>
        <description>This field is used in Application for Federal Assistance form as Date Received by State under State Use Only block, SF-424 R&amp;R Multi-Project Cover form as Date Received By State.</description>
        <label>Date Recieved By State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is used in Certification Regarding Lobbying form as Date, Assurances for Non Construction form as Date, Assurances for Construction form as Date, Application for Federal Assistance form as Date Received, SF-424 R&amp;R Multi-project Cover form as Date Submitted,  Research &amp; Related Other Project Information form.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatingViolence__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Dating Violence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_Type2__c</fullName>
        <label>Degree Type2</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <label>Degree Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>